# StencilIR

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  sonar-project.properties
.github/workflows/: build_and_test.yml  clang_format.yml  deploy.yml  sonarqube.yml
bindings/: CMakeLists.txt  StencilIRExt.cpp
compiler/: .clang-format  CMakeLists.txt
compiler/src/: CMakeLists.txt  dllmain.cpp
compiler/src/AST/: AST.hpp  CMakeLists.txt  LowerToIR.cpp  LowerToIR.hpp  Node.cpp  Node.hpp  Types.hpp
compiler/src/Compiler/: AllToLLVMPass.cpp  AllToLLVMPass.hpp  CMakeLists.txt  Execution.hpp  KernelToAffinePass.cpp  KernelToAffinePass.hpp  LowerAST.cpp  LowerAST.hpp  Lowering.cpp  Lowering.hpp  LoweringPasses.cpp  Mock IR:.mlir  MockPrintPass.cpp  MockPrintPass.hpp  MockToArithPass.cpp  MockToArithPass.hpp  PrintToLLVMPass.cpp  PrintToLLVMPass.hpp  StencilLoweringPasses.cpp  StencilLoweringPasses.hpp  StencilToAffinePass.cpp  StencilToAffinePass.hpp  main.cpp
compiler/src/MockDialect/: CMakeLists.txt  MockDialect.cpp  MockDialect.hpp  MockOps.cpp  MockOps.hpp
compiler/src/MockDialect/include/: CMakeLists.txt
compiler/src/MockDialect/include/MockDialect/: CMakeLists.txt  Mock.td
compiler/src/Test/: CMakeLists.txt  Execution.cpp  main.cpp
compiler/src/TestGpu/: main.cpp
python/: requirements-dev.txt
python/bindings/: Bindings.cpp  CMakeLists.txt  StencilIRBindings.cpp
python/src/: CMakeLists.txt  CompiledModule.cpp  CompiledModule.hpp  Interface.cpp  Invoke.cpp  Invoke.hpp
python/test/: test.py  test_bindings_exist.py  test_compilation.py  test_cuda.py  test_import.py  test_invoke.py
src/: CMakeLists.txt
src/AST/: AST.hpp  ASTBuilding.hpp  ASTNodes.hpp  Build.hpp  Building.hpp  CMakeLists.txt  ConvertASTToIR.cpp  ConvertASTToIR.hpp  GenerateIR.cpp  GenerateIR.hpp  IRGenerator.hpp  LowerToIR.cpp  LowerToIR.hpp  Nodes.hpp  SymbolTable.hpp  Types.hpp  Utility.cpp  Utility.hpp
src/Compiler/: CMakeLists.txt  Compiler.cpp  Compiler.hpp  Lowering.cpp  Lowering.hpp  LoweringPasses.cpp  LoweringPasses.hpp  Pipelines.cpp  Pipelines.hpp  StencilLoweringPasses.cpp  StencilLoweringPasses.hpp
src/Conversion/: CMakeLists.txt  Passes.hpp  StencilToStd.cpp  StencilToStd.hpp
src/Conversion/StencilApplyToLoops/: StencilApplyToLoops.cpp  StencilApplyToLoops.hpp  StencilToLoops.cpp  StencilToLoops.hpp
src/Conversion/StencilOpsToStandard/: StencilOpsToStandard.cpp  StencilOpsToStandard.hpp
src/Conversion/StencilPrintToLLVM/: StencilPrintToLLVM.cpp  StencilPrintToLLVM.hpp
src/Conversion/StencilToFunc/: StencilToFunc.cpp  StencilToFunc.hpp
src/Conversion/StencilToStandard/: StencilToStandard.cpp  StencilToStandard.hpp
src/DAG/: CMakeLists.txt  ConvertOps.cpp  Converter.cpp  Converter.hpp  Operation.cpp  Operation.hpp  Ops.hpp
src/Diagnostics/: CMakeLists.txt  Exception.cpp  Exception.hpp  Formatting.cpp  Formatting.hpp  Handlers.cpp  Handlers.hpp
src/Dialect/: CMakeLists.txt
src/Dialect/BufferizationExtensions/: CMakeLists.txt
src/Dialect/BufferizationExtensions/Transforms/: OneShotBufferizeCombined.cpp  OneShotBufferizeCombined.hpp
src/Dialect/Stencil/: CMakeLists.txt
src/Dialect/Stencil/IR/: StencilOps.cpp  StencilOps.hpp
src/Dialect/Stencil/Transforms/: BufferizableOpInterfaceImpl.cpp  BufferizableOpInterfaceImpl.hpp  DeduplicateApplyInputs.cpp  DeduplicateApplyInputs.hpp  FuseApplyOps.cpp  FuseApplyOps.hpp  FuseExtractSliceOps.cpp  FuseExtractSliceOps.hpp  Passes.hpp  RuntimeVerificationInterfaceImpl.cpp  RuntimeVerificationInterfaceImpl.hpp  Utility.cpp  Utility.hpp
src/Dialect/Stencil/include/: CMakeLists.txt
src/Dialect/Stencil/include/Stencil/IR/: CMakeLists.txt  Stencil.td
src/Execution/: CMakeLists.txt  DynamicLinking.cpp  DynamicLinking.hpp  Execution.cpp  Execution.hpp
src/IR/: CMakeLists.txt  ConvertOps.cpp  ConvertOps.hpp  ConvertUtils.cpp  ConvertUtils.hpp  Converter.cpp  Converter.hpp  Operation.cpp  Operation.hpp  Ops.hpp  Types.cpp  Types.hpp
src/StencilDialect/: BufferizableOpInterfaceImpl.cpp  CMakeLists.txt  StencilOps.cpp  StencilOps.hpp
src/TestGpu/: CMakeLists.txt
src/TestUnstructured/: main.cpp
src/Transforms/: CMakeLists.txt  EliminateSlicing.cpp  EliminateSlicing.hpp  EliminateUnusedAllocTensors.cpp  EliminateUnusedAllocTensors.hpp  Passes.hpp  ReduceDimOps.cpp  ReduceDimOps.hpp  UseCudaLibdevice.cpp  UseCudaLibdevice.hpp  Utility.cpp  Utility.hpp
test/: CMakeLists.txt
test/AST/: CMakeLists.txt  Test_ArithmeticLogic.cpp  Test_Assign.cpp  Test_Block.cpp  Test_Call.cpp  Test_Function.cpp  Test_If.cpp  Test_IndexManipulation.cpp  Test_Pack.cpp  Test_Return.cpp  Test_Yield.cpp  main.cpp
test/DAG/: CMakeLists.txt  Test_ArithmeticLogic.cpp  Test_ControlFlow.cpp  Test_Function.cpp  Test_Module.cpp  Test_Stencil.cpp  Test_Tensor.cpp
test/IR/: CMakeLists.txt  Test_ArithmeticLogic.cpp  Test_ControlFlow.cpp  Test_Module.cpp  Test_Stencil.cpp  Test_Tensor.cpp  main.cpp
test/Integration/: CMakeLists.txt  Test_CUDA.cpp  Test_DAG.cpp  Test_ObjectFile.cpp  Test_Optimization.cpp  Test_Structured.cpp  Test_Unstructured.cpp
test/Integration/Utility/: RunAST.hpp  RunModule.hpp
test/Passes/: CMakeLists.txt  ConvertStencilApplyToLoops.mlir  ConvertStencilToFunc.mlir  ConvertStencilToLoops.mlir  ConvertStencilToStandard.mlir  DeduplicateApplyInputs.mlir  EliminateAllocTensors.mlir  EliminateSlicing.mlir  FuseApplyOps.mlir  FuseExtractSliceOps.mlir  InlineStencilInvocations.mlir  ReduceDimOps.mlir  Regression_BufferizeCrash.mlir  Test_Passes.cpp
test/TestTools/: ASTUtils.hpp  CMakeLists.txt  FileCheck.cpp  FileCheck.hpp
test/ast/: CMakeLists.txt  Checker.cpp  Checker.hpp  Test_ArithmeticLogic.cpp  Test_Assign.cpp  Test_Block.cpp  Test_Call.cpp  Test_Function.cpp  Test_If.cpp  Test_Pack.cpp  Test_Return.cpp  Test_Yield.cpp
test/integration/: CMakeLists.txt  Structured.cpp  Unstructured.cpp
test/integration/TestGpu/: main.cpp
test/integration/TestStructured/: CMakeLists.txt  main.cpp
test/integration/TestUnstructured/: CMakeLists.txt  main.cpp
test/integration/Utility/: RunAST.hpp
(+11 files in other folders)
